status service refactor
